# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  26 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17693.ebuild:
  Bump, repoman now has prefix.usedwithhelpers check added

*portage-2.2.01.17693 (26 Jan 2011)

  26 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17693.ebuild:
  Bump, repoman now has prefix.usedwithhelpers check added

*portage-2.2.01.17680 (22 Jan 2011)

  22 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17583.ebuild, +portage-2.2.01.17680.ebuild:
  Version bump, matches portage-2.2.0_alpha19

*portage-2.2.01.17649 (18 Jan 2011)

  18 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17555.ebuild, +portage-2.2.01.17649.ebuild:
  Version bump, matches portage-2.2.0_alpha17

*portage-2.2.01.17583 (07 Jan 2011)

  07 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17422.ebuild, +portage-2.2.01.17583.ebuild:
  Version bump, matches portage-2.2.0_alpha14

*portage-2.2.01.17555 (03 Jan 2011)

  03 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17409.ebuild, +portage-2.2.01.17555.ebuild:
  Version bump, matches portage-2.2.0_alpha12

*portage-2.2.01.17422 (21 Dec 2010)

  21 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17304.ebuild, +portage-2.2.01.17422.ebuild:
  Version bump, matches portage-2.2.0_alpha10

*portage-2.2.01.17409 (20 Dec 2010)

  20 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17390.ebuild, +portage-2.2.01.17409.ebuild:
  Version bump, matches portage-2.2_alpha9

*portage-2.2.01.17390 (15 Dec 2010)

  15 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17380.ebuild, +portage-2.2.01.17390.ebuild:
  Bump for fix for bug #348790, fixup fix for detection of python.

*portage-2.2.01.17380 (13 Dec 2010)

  13 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17377.ebuild, +portage-2.2.01.17380.ebuild: