@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  27 Jan 2011; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.01.17649.ebuild:
+  Drop old
+
   26 Jan 2011; Fabian Groffen <grobian@gentoo.org>
   +portage-2.2.01.17693.ebuild:
   Bump, repoman now has prefix.usedwithhelpers check added
